updated some documentation markdown

--- a/bank_churn.ipynb
+++ b/bank_churn.ipynb
@@ -1279,8 +1279,7 @@
    "metadata": {},
    "source": [
     "# Hyperparameter Tuning\n",
-    "- **Manual Tuning**: Adjust hyperparameters based on model performance and retrain. Focus on learning rate, layer sizes, and regularization techniques.\n",
-    "- **Automated Tuning**: Consider using tools like Keras Tuner or GridSearchCV for systematic hyperparameter optimization."
+    "I have used GridSearchCV a lot before for various ensemble models, but this time I wanted to try something new by using it in an ANN with KerasClassifier."
    ]
   },
   {
@@ -1353,15 +1352,8 @@
    "metadata": {},
    "source": [
     "# Model Evaluation\n",
-    "- **Use Test Set**: Evaluate the final model on X_test and y_test using model.evaluate().\n",
-    "- **Metrics**: Consider accuracy, precision, recall, F1-score, ROC curve, etc., depending on your problem's specifics.\n",
-    "- **Cross-validation**: Optionally, use cross-validation for a more robust evaluation.\n",
     "\n",
-    "Confusion Matrix: Evaluate performance in terms of true positives, false positives, true negatives, and false negatives.\n",
-    "\n",
-    "ROC Curve and AUC: Useful for understanding the trade-off between true positive rate and false positive rate.\n",
-    "\n",
-    "Precision, Recall, F1-Score: Provides a more nuanced view than accuracy, especially if the data is imbalanced."
+    "Precision, Recall, F1-Score"
    ]
   },
   {
@@ -1370,9 +1362,7 @@
    "metadata": {},
    "source": [
     "# Checking Feature Importance\n",
-    "- **ANNs and Feature Importance**: Unlike some models (like decision trees), ANNs don’t provide a straightforward way to assess feature importance.\n",
-    "- **Techniques to Use**: Consider methods like permutation feature importance, or SHAP (SHapley Additive exPlanations).\n",
-    "- **Alternative Approach**: Train simpler models (like Random Forest) alongside your ANN for comparative feature importance analysis."
+    "Will probably train a subsequent random forest model to show feature importance"
    ]
   },
   {
