more descriptive updates

--- a/bank_churn.ipynb
+++ b/bank_churn.ipynb
@@ -960,9 +960,7 @@
    "metadata": {},
    "source": [
     "# Creating the Model\n",
-    "- **Define the Architecture**: Decide the number of layers and neurons in each layer. Start with a simple model (e.g., two hidden layers) and increase complexity as needed.\n",
-    "- **Choose Activation Functions**: Typically, 'relu' is used for hidden layers, and 'sigmoid' or 'softmax' for the output layer, depending on whether it's a binary or multi-class classification.\n",
-    "- **Initialize the Model:** Use Sequential() in TensorFlow to create a linear stack of layers."
+    "Starting out with a normal ANN with some simple and common hyperparameters"
    ]
   },
   {
