--- a/bank_churn.ipynb
+++ b/bank_churn.ipynb
@@ -1044,9 +1044,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training the Model\n",
-    "- **Compile the Model**: Use model.compile() to set the optimizer, loss function, and metrics.\n",
-    "- **Train:** Use model.fit() on your training data (X_train, y_train), setting a reasonable number of epochs and batch size. Include validation_data=(X_val, y_val) to use your validation set."
+    "# Training the Model"
    ]
   },
   {
